--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "squirrel-orm"]
-    path = libs/squirrel-orm/
+    path = libs/squirrel-orm
     url = https://github.com/inlife/squirrel-orm
